feat: add main info;

--- a/index.html
+++ b/index.html
@@ -6,9 +6,38 @@
     <link rel="stylesheet" type="text/css" href="./css/style.css">
 </head>
 <body>
-<section class="main-info">
-</section>
 <section class="main-description">
+    <h3>Skills</h3>
+    <ul>
+        <li>PHP</li>
+        <li>MYSQL</li>
+        <li>JS (minor)</li>
+        <li>CSS (minor)</li>
+        <li>HTML</li>
+        <li>RabbitMQ (minor)</li>
+        <li>ZF</li>
+        <li>React (minor)</li>
+        <li>Keycloak (minor)</li>
+        <li>Docker</li>
+    </ul>
+    <h3>Code</h3>
+    <ul>
+        <li>on request</li>
+    </ul>
+    <h3>Experience</h3>
+    <ul>
+        <li>Itictory  LTD - 2017</li>
+        <li>Godel technologies  LTD - current</li>
+    </ul>
+    <h3>Education</h3>
+    <ul>
+        <li>PHP training (Belhard)</li>
+        <li>JS training (Belhard)</li>
+    </ul>
+    <h3>English Skills</h3>
+    <ul>
+        <li>B-2 (Upper Intermediate). I lived abroad for several years.</li>
+    </ul>
 </section>
 <footer>
     <span class="copyright-info"> &#169; all rights - all right.</span>
