feat: add image;

--- a/index.html
+++ b/index.html
@@ -6,6 +6,20 @@
     <link rel="stylesheet" type="text/css" href="./css/style.css">
 </head>
 <body>
+<section class="main-info">
+    <h1 class="title">My awesome resume for headhunters</h1>
+    <figure class="main-image">
+        <img class="main-image" src="./images/photo.jpeg" alt="My photo" title="I'm your father Luke!">
+        <figcaption>Choose me!</figcaption>
+    </figure>
+    <h3>Name</h3>
+    <strong>Viktar Vayavodzin</strong>
+    <h3>Contacts</h3>
+    <p class="contacts"><a href="mailto:rs.vayavodzin@gmail.com">rs.vayavodzin@gmail.com</a></p>
+    <h3>Summary</h3>
+    <p class="summary">I' am interested in FE technologies, particularly JS. I' m not looking for a job. The main purpose of joining this training is to get up-to-date experience from  skilled frontend
+        team and put existing knowledge in right order. </p>
+</section>
 <section class="main-description">
     <h3>Skills</h3>
     <ul>
